docs/tests/parser/concurrency/invalid/LockMissingOpenParen.b
fn void test() {
    lock myMutex) {
    }
}
